<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activities.RecipeCategories">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/mainscreen"
        android:contentDescription="@string/background_image"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="337dp"
        android:layout_height="195dp"
        android:layout_marginTop="148dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ToggleButton
            android:id="@+id/lunchRecipesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/categories_toggle"
            android:fontFamily="@font/montserrat"
            android:onClick="onLunchClicked"
            android:text="@string/togglebutton"
            android:textColor="@color/buttonTextColor"
            android:textOff="@string/lunch"
            android:textOn="@string/lunch"
            tools:text="Lunch" />

        <ToggleButton
            android:id="@+id/DinnerRecipesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/categories_toggle"
            android:fontFamily="@font/montserrat"
            android:onClick="onDinnerClicked"
            android:text="@string/togglebutton"
            android:textColor="@color/buttonTextColor"
            android:textOff="@string/dinner"
            android:textOn="DINNER"
            tools:text="Dinner" />

        <ToggleButton
            android:id="@+id/DessertsRecipesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/categories_toggle"
            android:fontFamily="@font/montserrat"
            android:onClick="onDessertsClicked"
            android:text="@string/togglebutton"
            android:textColor="@color/buttonTextColor"
            android:textOff="@string/Desserts"
            android:textOn="@string/Desserts"
            tools:text="Desserts" />
    </LinearLayout>

    <Button
        android:id="@+id/nextCategoriesBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/myrecipeapp_button"
        android:fontFamily="@font/montserrat"
        android:onClick="categoriesNextClicked"
        android:text="@string/next"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>