<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activities.AddRecipe"
    android:background="@color/primaryColor">


        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>


        <ImageView
            android:id="@+id/recipeImage"
            android:layout_width="201dp"
            android:layout_height="149dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/recipelau"
            android:contentDescription="@string/recipe_image" />

        <Button
            android:id="@+id/addNewRecipeBtn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="173dp"
            android:layout_height="41dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/add_new_recipe"
            android:textAlignment="center"
            android:textColor="@color/buttonTextColor"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addRecipesTxt" />

        <EditText
            android:id="@+id/addRecipesTxt"
            android:layout_width="200dp"
            android:layout_height="41dp"
            android:layout_marginTop="45dp"
            android:ems="10"
            android:hint="@string/add_new_recipe"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectedRecipeTxt"
            android:autofillHints="" />

        <TextView
            android:id="@+id/selectedRecipeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="50dp"
            android:text="@string/muffins"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeImage" />



</androidx.constraintlayout.widget.ConstraintLayout>